[package]
edition = "2021"
name = "api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
actix-web = "4.3.1"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
redis = { version = "0.22.3", features = ["tokio-comp"] }
sea-orm = { version = "0.11.1", features = [
  "sqlx-mysql",
  "runtime-actix-rustls",
  "macros",
] }
serde = { version = "1", features = ["derive"] }
jsonwebtoken = "8.3.0"
chrono = "0.4.24"
derive_more = "0.99.17"
rust-argon2 = "1.0.0"
